--- a/EMS/views/navbar.ejs
+++ b/EMS/views/navbar.ejs
@@ -6,9 +6,9 @@
    </div>
    
   <ul class="nav flex-column">
-  <li><i class="fas fa-home"></i>Home</li>
+  <a href="/"><li><i class="fas fa-home"></i>Home</li></a>
   <li><i class="far fa-calendar-alt"></i> Calendar </li>
-  <li><i class="fas fa-user-friends"></i>Employees</li>
+  <a href="/list"><li><i class="fas fa-user-friends"></i>Employees</li></a>
   <li><i class="fas fa-cog"></i>Settings</li>
   </ul>
 </div> 
