--- a/EMS/views/header.ejs
+++ b/EMS/views/header.ejs
@@ -6,7 +6,7 @@
     />
   
     <title></title>
-   <link rel="stylesheet" type="text/css" href="styles/style.css">
+   <link rel="stylesheet" type="text/css" href="/styles/style.css">
     <!-- Stylesheet - Bootstrap -->   
     <link
       rel="stylesheet"
