--- a/EMS/views/list.ejs
+++ b/EMS/views/list.ejs
@@ -10,7 +10,7 @@
             </div>
             <div class="col-10">
                 <% if(employee.length) { %>
-                <h2  class="text-center">Employee List</h2><br />
+                <h2 class="text-center">Employee List</h2><br />
                 <div class="card" style="margin-top: 0">
                     <table class="table table‐hover">
                         <thead class="thead‐dark">
@@ -22,8 +22,8 @@
                             <% employee.forEach(function (entry) { %>
                             <tr>
                                 <td><%= entry.name %></td>
-                                <td> </td>
-                            </tr><a style="color:#555" href="/view/<%=entry.name %>"></a>
+                                <td> <a style="color:#555!important" href="/view/<%=entry.name %>">View</a></td>
+                            </tr>
                         </tbody>
                         <% }) %>
                     </table>
@@ -31,12 +31,9 @@
                     No entries! <a href="/new">Add one!</a>
                     <% } %>
                 </div>
-
                 <div style="text-align: center;margin-top:10px">
                     <a href="/new"><button class="btn btn-outline-primary">Add New</button></a>
-
                 </div>
-
             </div>
         </div>
     </div>
